[tool.poetry]
name = "code-finder"
version = "0.1.0"
description = "Backend assistant, logger and analyzer for Code Assistant."
authors = ["Abishek Goda <abishek.goda@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
lizard = "^1.17.7"
yattag = "^1.14.0"
tortoise-orm = "^0.16.18"
aiomysql = "^0.0.21"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
